# routers/commentsRouter_controllers_searchcontroller.go
@@ -1,0 +1,28 @@
+package routers
+
+import (
+	"github.com/astaxie/beego"
+	"github.com/astaxie/beego/context/param"
+)
+
+func init() {
+
+    beego.GlobalControllerRouter["rent-house/controllers/searchcontroller:SearchController"] = append(beego.GlobalControllerRouter["rent-house/controllers/searchcontroller:SearchController"],
+        beego.ControllerComments{
+            Method: "GetPageActivateSearchHouse",
+            Router: "/page-search-results",
+            AllowHTTPMethods: []string{"get"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
+
+    beego.GlobalControllerRouter["rent-house/controllers/searchcontroller:SearchController"] = append(beego.GlobalControllerRouter["rent-house/controllers/searchcontroller:SearchController"],
+        beego.ControllerComments{
+            Method: "GetAllSearchHouse",
+            Router: "/search-results",
+            AllowHTTPMethods: []string{"get"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
+
+}
