# swagger/swagger.json
@@ -573,16 +573,7 @@
                     "house"
                 ],
                 "description": "get all renters",
-                "operationId": "HouseController.GetAllSearchHouse",
-                "parameters": [
-                    {
-                        "in": "query",
-                        "name": "key",
-                        "description": "key",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
+                "operationId": "HouseController.GetAllActivateHouse",
                 "responses": {
                     "200": {
                         "description": "",
@@ -628,48 +619,6 @@
                 }
             }
         },
-        "/house/search-results": {
-            "get": {
-                "tags": [
-                    "house"
-                ],
-                "description": "get page houses",
-                "operationId": "HouseController.GetPageActivateSearchHouse",
-                "parameters": [
-                    {
-                        "in": "query",
-                        "name": "key",
-                        "description": "key for search",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "page",
-                        "description": "page",
-                        "required": true,
-                        "type": "integer",
-                        "format": "int64"
-                    },
-                    {
-                        "in": "query",
-                        "name": "count",
-                        "description": "count",
-                        "required": true,
-                        "type": "integer",
-                        "format": "int64"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.House"
-                        }
-                    }
-                }
-            }
-        },
         "/house/{houseID}/": {
             "get": {
                 "tags": [
@@ -683,24 +632,6 @@
                         "name": "houseID",
                         "description": "The house id",
                         "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "province",
-                        "description": "the provinceID",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "district",
-                        "description": "the districtID",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "commune",
-                        "description": "the commune id",
                         "type": "string"
                     }
                 ],
@@ -1407,6 +1338,125 @@
                     }
                 }
             }
+        },
+        "/search/page-search-results": {
+            "get": {
+                "tags": [
+                    "search"
+                ],
+                "description": "price range: VeryLow = \"* - 500\" DownLow = \"500 - 700\" UpLow = \"700 - 1000\" DownMedium = \"1000 - 1500\" UpMedium = \"1500 - 2000\" High = \"2000 - 2500\" VeryHigh = \"2500 - 3500\" ExHigh = \"3500 - 5000\" More = \"5000 - *\"\"",
+                "operationId": "SearchController.GetPageActivateSearchHouse",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "key",
+                        "description": "key for search",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "province",
+                        "description": "province id",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "commune",
+                        "description": "commune id",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "district",
+                        "description": "distric id",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "priceRange",
+                        "description": "price range",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "page",
+                        "description": "page",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "query",
+                        "name": "count",
+                        "description": "count",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.House"
+                        }
+                    }
+                }
+            }
+        },
+        "/search/search-results": {
+            "get": {
+                "tags": [
+                    "search"
+                ],
+                "description": "price range: VeryLow = \"* - 500\" DownLow = \"500 - 700\"  UpLow = \"700 - 1000\" DownMedium = \"1000 - 1500\" UpMedium = \"1500 - 2000\" High = \"2000 - 2500\" VeryHigh = \"2500 - 3500\" ExHigh = \"3500 - 5000\" More = \"5000 - *\"\"",
+                "operationId": "SearchController.GetAllSearchHouse",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "province",
+                        "description": "province id",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "commune",
+                        "description": "commune id",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "district",
+                        "description": "district id",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "priceRange",
+                        "description": "price range",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "key",
+                        "description": "key",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.House"
+                        }
+                    },
+                    "403": {
+                        "description": ":houseID is empty"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -1494,6 +1544,9 @@
                 "address": {
                     "$ref": "#/definitions/models.Address"
                 },
+                "commune_code": {
+                    "type": "string"
+                },
                 "content": {
                     "type": "string"
                 },
@@ -1516,20 +1569,29 @@
                 "infrastructure": {
                     "$ref": "#/definitions/models.Infrastructure"
                 },
+                "last_viewed": {
+                    "type": "integer",
+                    "format": "int64"
+                },
                 "like": {
                     "type": "integer",
                     "format": "int64"
                 },
+                "monthly_view": {
+                    "type": "integer",
+                    "format": "int64"
+                },
                 "near_by": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
+                    "type": "string"
                 },
                 "owner_id": {
                     "type": "string"
                 },
                 "post_time": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "pre_order": {
                     "type": "integer",
                     "format": "int64"
                 },
@@ -1539,6 +1601,10 @@
                 },
                 "rented": {
                     "type": "boolean"
+                },
+                "surface": {
+                    "type": "integer",
+                    "format": "int64"
                 },
                 "unit": {
                     "$ref": "#/definitions/models.Unit"
@@ -1573,6 +1639,10 @@
                 },
                 "heater": {
                     "type": "boolean"
+                },
+                "number_of_room": {
+                    "type": "integer",
+                    "format": "int64"
                 },
                 "other": {
                     "type": "string"
@@ -1738,12 +1808,17 @@
                     "$ref": "#/definitions/models.Infrastructure"
                 },
                 "near_by": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
+                    "type": "string"
+                },
+                "pre_order": {
+                    "type": "integer",
+                    "format": "int64"
                 },
                 "price": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "surface": {
                     "type": "integer",
                     "format": "int64"
                 },
@@ -1775,12 +1850,17 @@
                     "$ref": "#/definitions/models.Infrastructure"
                 },
                 "near_by": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
+                    "type": "string"
+                },
+                "pre_order": {
+                    "type": "integer",
+                    "format": "int64"
                 },
                 "price": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "surface": {
                     "type": "integer",
                     "format": "int64"
                 },
